compressing image header, adding animate.css, fix bug sidenav on mobile device

--- a/include/css/custom.css
+++ b/include/css/custom.css
@@ -1,5 +1,5 @@
 *{
-  font-family: 'Mada', roboto, sans-serif;
+  font-family: 'Signika', sans-serif;
   margin: 0 0 0 0;
   padding: 0 0 0 0;
 }
